2004-08-04  Michèle Garoche <michele.garoche@easyconnect.fr>
 
 	* cnxml.xml
	Put the file in conformance with its DTD.

	* test-entities.xml:
	Doctype in conformity with contents (article).

	* file-roller.xml:
	Artheader replaced by ArticleInfo in DocBook 4.

	* error-proposal.xml:
	Added a para that was omitted in listitem.

	* i18n.xml:
	Added Document Type Definition, added title for chapter,
	now it validates.

2004-03-13  Geert Stappers <stappers@stappers.nl>

	* Makefile.am
	defined NULL, for easier adding new files
	added test-table3.xml to get it into the tarball

2004-03-12  David Malcolm <david@davemalcolm.demon.co.uk>

	* test-table3.xml

	New test file, well-formed XML but invalid DocBook, to try to give editing widget code a tough test

2004-02-09  Geert Stappers <stappers@stappers.nl>

	* all the XDS files are (re)moved.

	* Makefile.am
	is affected by that move.

2004-02-07  David Malcolm <david@davemalcolm.demon.co.uk>

	* xsl.xds

	Fixed the nsURI and xml:lang attributes

	* relax-ng.xds

	Fixed the nsURI attribute
	
	* Makefile.am

	Added teixlite.xds
	
	* cnxml.xds, dispspec-template.xds, dispspec.xds.in, docbook.xds.in, forrest-document.xds.in, kernel-traffic-newsletter.xds.in, readme.xds, relax-ng.xds, teixlite.xds, website-layout.xds, website-webpage.xds, xds.dtd, xhtml1-strict.xds.in, xsl.xds

	s/tag/localName for <element>, s/tag/childElement for <header-info>, manually correcting where this went wrong (I may have missed a few)

2004-02-04  David Malcolm <david@davemalcolm.demon.co.uk>

	* teixlite.xds

	Initial version of dispspec for TEI Lite, by Roberto Rosselli Del Turco

2004-02-03  David Malcolm <david@davemalcolm.demon.co.uk>

	* dispspec-template.xds

	Removed bogus locale attribute

	* dispspec-template.xds, docbook.xds.in, forrest-document.xds.in, kernel-traffic-newsletter.xds.in, xds.dtd, xhtml1-strict.xds.in, xsl.xds

	Renamed plugin-id attributes to service-id

2004-01-19  David Malcolm <david@davemalcolm.demon.co.uk>
